--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,19 @@
   </div>
   <div class="content"> 
     <div>
-      Todo list <div *ngIf="selectedCategory">{{selectedCategory.name}}</div>
+
+      Todo list <div *ngIf="selectedCategory">{{selectedCategory.name}}
+
+          <div *ngIf="todosForCat.length > 0">
+              <ol>
+                <li *ngFor="let todo of todosForCat">{{todo.title}}</li>
+              </ol>
+            </div>
+
+      </div>
+
+      
+
     </div>
     <input type="text" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()" placeholder="Enter new Todo">
   </div>
