--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,15 @@
 .container{
     margin: 100px;
     display: inline-flex;
+
+    border: 1px solid;
+    border-radius: 23px;
+    padding: 50px;
+}
+
+.p-left{
+    border-right: 1px solid;
+    padding-right: 20px;
 }
 
 .p-right{
